templates/static/table.css
h1 {
  color: #000;
  text-transform: uppercase;
  font-weight: 300;
  text-align: center;
  margin-bottom: 15px;
}

table {
  width: 100%;
  table-layout: fixed;
  border-collapse: collapse;
}

.tbl-header {
  background: #f3f3f3;
  position: sticky;
  top: 0;
  z-index: 1;
}

.tbl-content {
  height: 300px;
  overflow-x: auto;
  border: 1px solid rgba(255, 255, 255, 0.15);
}

th, td {
  padding: 15px;
  font-size: 16px;
  color: #000;
}

th {
  font-weight: 510;
  background: #f9f9f9;
  text-transform: uppercase;
}

td {
  font-weight: 300;
  border-bottom: 1px solid #ddd;
}

tr:hover {
  background: #f9f9f9;
  cursor: pointer;
}

td:first-child, th:first-child {
  white-space: nowrap;
  width: 100px;
  text-align: left;
  padding-left: 5px;
}

::-webkit-scrollbar {
  width: 3px;
}
::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.1);
}

@media (max-width: 900px) {
  .tbl-content {
    overflow-x: auto;
  }
  th, td {
    font-size: 14px;
    white-space: nowrap;
  }
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
}

.sec-center {
  position: relative;
  max-width: 100%;
  text-align: center;
  z-index: 200;
}

[type="checkbox"]:checked,
[type="checkbox"]:not(:checked) {
  position: absolute;
  left: -9999px;
  opacity: 0;
  pointer-events: none;
}

.dropdown:checked + label,
.dropdown:not(:checked) + label {
  position: relative;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 15px;
  line-height: 2;
  height: 50px;
  transition: all 200ms linear;
  border-radius: 4px;
  width: 150px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #ffeba7;
  cursor: pointer;
  color: #102770;
  box-shadow: 0 12px 35px 0 rgba(255, 235, 167, .15);
}

.dropdown:checked + label:before,
.dropdown:not(:checked) + label:before {
  position: fixed;
  top: 0;
  left: 0;
  content: '';
  width: 100%;
  height: 100%;
  z-index: -1;
  cursor: auto;
  pointer-events: none;
}

.dropdown:checked + label:before {
  pointer-events: auto;
}

.section-dropdown {
  position: absolute;
  padding: 5px;
  background-color: #111;
  top: 70px;
  left: 50%;
  transform: translateX(-50%);
  width: auto;
  max-width: 220px;
  border-radius: 4px;
  display: block;
  box-shadow: 0 14px 35px 0 rgba(9, 9, 12, 0.4);
  z-index: 2;
  opacity: 0;
  pointer-events: none;
  transition: all 200ms linear;
}

.dropdown:checked ~ .section-dropdown {
  opacity: 1;
  pointer-events: auto;
  transform: translateY(0);
}

.section-dropdown:before {
  position: absolute;
  top: -20px;
  left: 0;
  width: 100%;
  height: 20px;
  content: '';
  display: block;
  z-index: 1;
}

.section-dropdown:after {
  position: absolute;
  top: -7px;
  left: 50%;
  transform: translateX(-50%);
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-bottom: 8px solid #111;
  content: '';
  display: block;
  z-index: 2;
  transition: all 200ms linear;
}

.section-dropdown a {
  position: relative;
  color: #fff;
  transition: all 200ms linear;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 15px;
  border-radius: 2px;
  padding: 5px 0;
  padding-left: 20px;
  padding-right: 15px;
  margin: 2px 0;
  text-align: left;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.section-dropdown a:hover {
  color: #102770;
  background-color: #ffeba7;
}

